# Yorishiro

./: .gitignore  CHANGELOG.md  CHARACTER_GUIDELINES.ja.md  CHARACTER_GUIDELINES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  CREDITS.ja.md  CREDITS.md  DEVELOPMENT.md  LICENSE  README.ja.md  README.md  SECURITY.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json  rustfmt.toml  tsconfig.json  typedoc.json  vite.config.ts
.github/: RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  crash_report.yml
.github/workflows/: build-windows.yml  ci.yml  cli-canary.yml  release.yml
bundled-packs/: README.en.md  README.md
bundled-packs/scenes/: hmr.ts
bundled-packs/shared/: README.md
docs/: 2026-04-22-codex-ui-pack-plan2-3-provenance.md  CHARMINAL.md  INDEX.md  INHABITED_INTERFACE_PHILOSOPHY.md  PRESENCE_HARNESS.md  README.md  configuration.md  release-checklist.md  security.md  terminal.md  troubleshooting.ja.md  troubleshooting.md
docs/catalogs/: standard-hooks.md
docs/decisions/: README.md  active-secondary-response.md  agent-adapter.md  arg-mode-abandoned-monitor.md  autonomy-without-disruption.md  avatar-import-validation.md  body-interaction-style.md  bundled-pack-example-access.md  bundled-pack-immutability.md  codex-terminal-agent.md  cognitive-load-design-lens.md  context-wall-expression-rules.md  critical-constraints.md  effect-rendering-primitives.md  explicit-over-implicit-ugc.md  git2-embedded-snapshot-store.md  hook-signals.md  idle-text-physics-removed.md  independent-time-coupling.md  init-js-hot-reload.md  input-prefill-boundary.md  integration-over-consistency.md  interaction-as-presence.md  living-system-core-shell.md  loop-presence-layer.md  mcp-trust-tiers.md  motion-effect-trigger-axes.md  motion-intensity.md  pack-execution-classes.en.md  pack-execution-classes.md  pack-override-pattern.md  pack-provenance-boundary.md  pack-rollback-recovery.md  pack-sandbox-strategy.md  persona-multi-instance.md  persona-two-axes.md  physiological-reflex-layer.md  presence-contract-loud-unavailable.md  presence-over-spectacle.md  presence-restore-source-aware.md  (+19 more)
docs/philosophy/: CHARMINAL.ja.md  CHARMINAL.md  INHABITED_CHARACTER_INTERFACE.en.md  INHABITED_CHARACTER_INTERFACE.ja.md  INHABITED_CHARACTER_INTERFACE.md  INHABITED_INTERFACE_PHILOSOPHY.md  PHILOSOPHY.ja.md  PHILOSOPHY.md  PRESENCE_HARNESS.en.md  PRESENCE_HARNESS.ja.md  PRESENCE_HARNESS.md  SELF_REFERENTIAL_MCP.ja.md  SELF_REFERENTIAL_MCP.md
docs/plans/: 2026-05-02-r3f-host-integration-plan.md
docs/thinking/: PRESENCE_INTENSITY.md
public/: boot.css
scripts/: check-pack.mjs  fetch-assets.mjs
scripts/canary/: check-cli-surface.mjs
scripts/lib/: pack-checker.mjs  pack-checker.test.mjs
src/: App.css  App.tsx  README.md  bundled-packs.ts  character-surface.tsx  main.tsx  reload-curtain.test.ts  reload-curtain.ts  reload-visual-guard.ts  sidebar.tsx  terminal.test.tsx  terminal.tsx  title-bar-state.test.tsx  title-bar-state.ts  title-bar.test.tsx  title-bar.tsx  ui-pack-activation.test.ts  ui-pack-activation.ts  vite-env.d.ts  vrm-procedural.ts  vrm-viewer.tsx
src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: user-init-template.js
src-tauri/resources/charminal-plugin/: .mcp.json
src-tauri/resources/charminal-plugin/.claude-plugin/: plugin.json
src-tauri/resources/charminal-plugin/.codex-plugin/: plugin.json
src-tauri/resources/charminal-plugin/commands/: charm.md  create.md  help.md  shortcut.md  tutorial.md  update.md
src-tauri/resources/charminal-plugin/commands-en/: create.md  help.md  shortcut.md  tutorial.md  update.md
src-tauri/resources/charminal-plugin/commands-ja/: create.md  help.md  shortcut.md  tutorial.md  update.md
src-tauri/resources/journal-seed/: 2025-11-03.md  2025-11-17.md  2025-12-02.md  2025-12-19.md  2026-01-08.md  2026-01-27.md
src-tauri/resources/yorishiro-plugin/.claude-plugin/: plugin.json
src-tauri/resources/yorishiro-plugin/.codex-plugin/: plugin.json
src-tauri/resources/yorishiro-plugin/commands-en/: create.md  help.md  shortcut.md  tutorial.md  update.md
src-tauri/resources/yorishiro-plugin/commands-ja/: create.md  help.md  shortcut.md  tutorial.md  update.md
src-tauri/src/: lib.rs  main.rs  pty.rs  tts.rs
src-tauri/src/history/: mod.rs
src-tauri/src/journal/: callback.rs  cohabitation.rs  mod.rs  seed.rs
src-tauri/src/loop_reel/: mod.rs
src-tauri/src/mcp/: mod.rs  screenshot.rs  server.rs  tools.rs  types.rs
src-tauri/src/sessions/: mod.rs  osc133.rs  pty_session.rs  registry.rs  shell_wrapper.rs  types.rs
src-tauri/src/sessions/agent_adapter/: claude.rs  codex.rs  mod.rs  opencode.rs
src-tauri/src/sessions/shell_wrapper/: hook-reminder.sh  init.bash  init.fish  init.zsh  wrapper-bash.init.bash  wrapper-zsh.zshrc
src/bindings/: tauri-commands.ts
src/components/: AppErrorBoundary.tsx  LoopReelPlayer.test.tsx  LoopReelPlayer.tsx  RestoreConfirmDialog.test.tsx  RestoreConfirmDialog.tsx  TabIndicator.test.tsx  TabIndicator.tsx  TerminalWorkspace.test.tsx  TerminalWorkspace.tsx  WorkspaceSidebar.test.tsx  WorkspaceSidebar.tsx  session-tab-labels.test.ts  session-tab-labels.ts  session-tab-metadata-badges.test.ts  session-tab-metadata-badges.ts  workspace-sidebar-items.test.ts  workspace-sidebar-items.ts
src/core/: README.md  index.ts
src/i18n/: strings.test.ts  (+1 more)
(+590 files in other folders)
