[package]
name = "charminal"
version = "0.0.1"
description = "Charminal — someone who lives in your terminal."
authors = ["okktks"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "charminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
# MCP server: rmcp 1.5.0 + streamable-http-server（SSE の後継）+ axum で
# localhost に bind する。spike 結果は internal design-record
# 2026-04-18-phase-1c-rescue-and-mcp.md Section 4.5 / 4.6。
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
rmcp = { version = "1.5", features = ["server", "transport-streamable-http-server", "macros"] }
schemars = "1"
uuid = { version = "1", features = ["v4"] }
# screenshot: WKWebView native capture (macOS) + base64 encoding
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSBitmapImageRep", "NSImage", "NSGraphics"] }

[dev-dependencies]
pretty_assertions = "1"

