[package]
name = "charminal"
version = "0.5.2"
description = "Charminal — someone who lives in your terminal."
authors = ["okktks"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "charminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools feature は付けない。debug build では feature 無しでも WebView Inspector が
# 自動で有効になるため dev 体験は保たれる。一方この feature を付けると release build でも
# Inspector が開き、console から __TAURI_INTERNALS__.invoke で system_exec を含む全 IPC
# command を直接叩けてしまう（pack 信頼境界を console から迂回できる）。production には含めない。
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# in-app updater: GitHub Releases の latest.json を参照して署名検証つきで自己更新する。
# process は更新適用後の relaunch に使う。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "6"
libc = "0.2"
notify = "8.2.0"
# default-features = false で ssh/https transport を外し、openssl-sys 依存を断つ。
# history/mod.rs はローカル repo 操作のみ（network 転送なし）なので問題ない。
# これにより x86_64 クロスコンパイル（Apple Silicon runner 上）で openssl-sys の
# cross-compile 失敗を回避できる。
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
# MCP server: rmcp 1.7 + streamable-http-server（SSE の後継）+ axum で
# localhost に bind する。spike 結果は internal design-record
# 2026-04-18-phase-1c-rescue-and-mcp.md Section 4.5 / 4.6。
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
rmcp = { version = "1.7", features = ["server", "transport-streamable-http-server", "macros"] }
schemars = "1"
uuid = { version = "1", features = ["v4"] }
# screenshot: WKWebView native capture (macOS) + base64 encoding
base64 = "0.22"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSBitmapImageRep", "NSImage", "NSGraphics"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
pretty_assertions = "1"
